# tp_lab5

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
tests/: test.cpp
